[package]
name = "phonoscope"
version = "0.6.1"
edition = "2021"
authors = ["larrabyte"]
description = "A (locally-sourced) MPRIS-based song lyrics display."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = "0.4.8"
glib = "0.15.12"
mpris = "1.1.2"
clap = {version = "4.0.15", features = ["derive", "unicode", "wrap_help"]}
