[package]
name = "phonoscope"
version = "0.9.0"
edition = "2021"
authors = ["larrabyte"]
description = "A (locally-sourced) MPRIS-based song lyrics displayer."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpris = "2.0.0-rc3"
glib = "0.16.1"

[dependencies.adw]
package = "libadwaita"
version = "0.2.0"

[dependencies.gtk]
package = "gtk4"
version = "0.5.0"
features = ["v4_8"]

[dependencies.relm]
package = "relm4"
version = "0.5.0-beta.4"
features = ["libadwaita"]
